# trackfox-tkfx

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  TKFX_HW1-0.xml  readme.md
.github/matrices/: cmake-flags.json
.github/workflows/: main.yml
application/inc/: error.h  error_base.h  mode.h  tkfx_flags.h  tkfx_flags_slave.h
application/src/: at.c  main.c
drivers/components/inc/: accelerometer.h  fxls89xxxx_driver_flags.h  led.h  lr11xx_driver_flags.h  maxm10x_driver_flags.h  mma8653fc.h  mma865xfc_configuration.h  mma865xfc_driver_flags.h  neom8x_driver_flags.h  s2lp.h  s2lp_driver_flags.h  sensors_hw.h  sht3x.h  sht3x_driver_flags.h
drivers/components/src/: accelerometer.c  fxls89xxxx_hw.c  led.c  lr11xx_hw.c  maxm10x_hw.c  mma8653fc.c  mma865xfc_configuration.c  mma865xfc_hw.c  neom8n.c  neom8x_hw.c  s2lp.c  s2lp_hw.c  sensors_hw.c  sht3x.c  sht3x_hw.c
drivers/peripherals/inc/: adc.h  dma.h  flash.h  gpio_mapping.h  i2c.h  i2c_address.h  iwdg.h  lpuart.h  mapping.h  mcu_mapping.h  nvic_priority.h  nvm.h  nvm_address.h  pwr.h  spi.h  stm32l0xx_drivers_flags.h  usart.h
drivers/peripherals/src/: adc.c  exti.c  flash.c  gpio.c  gpio_mapping.c  i2c.c  iwdg.c  lpuart.c  mapping.c  mcu_mapping.c  pwr.c  rcc.c  rtc.c  spi.c  tim.c  usart.c
drivers/registers/inc/: mma8653fc_reg.h  s2lp_reg.h  stm32l0xx_registers_flags.h
drivers/utils/inc/: at_instance.h  embedded_utils_flags.h  terminal_instance.h
drivers/utils/src/: math.c  terminal_hw.c
inc/: mode.h
inc/applicative/: at.h  dlk.h  error.h  geoloc.h  monitoring.h
inc/components/: mma8653fc.h  neom8n.h  power.h  s2lp.h  sht3x.h
inc/peripherals/: adc.h  aes.h  dma.h  exti.h  flash.h  gpio.h  i2c.h  iwdg.h  lptim.h  lpuart.h  mapping.h  nvic.h  nvm.h  pwr.h  rcc.h  rtc.h  spi.h  tim.h  usart.h
inc/registers/: flash_reg.h  mma8653fc_reg.h  nvic_reg.h  s2lp_reg.h  tim_reg.h  usart_reg.h
inc/sigfox/: rf_api.h  sigfox_api.h
inc/utils/: math.h  parser.h  string.h  types.h
linker/: tkfx_hw1-0.ld  tkfx_hw1-1.ld
linker/HW1_0/: LinkerScript.ld
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/cli/inc/: cli.h
middleware/cli/src/: cli.c
middleware/gps/inc/: gps.h
middleware/gps/src/: gps.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
middleware/sigfox/inc/: rfe.h  sigfox_ep_addon_aw_flags.h  sigfox_ep_flags.h  sigfox_ep_frames.h
middleware/sigfox/src/: mcu_api.c  rf_api.c  rf_api_lr11xx.c  rf_api_s2lp.c  rfe.c
middleware/wifi/inc/: wifi.h
middleware/wifi/src/: wifi.c
script/: HW1_0.jlink  HW1_1.jlink  TKFX_HW1-0_Debug.launch  TKFX_HW1-0_Run.launch  TKFX_HW1-1_Debug.launch  TKFX_HW1-1_Run.launch  git_version.sh  tkfx_hw1-0.jlink  tkfx_hw1-0_debug.launch  tkfx_hw1-0_run.launch  tkfx_hw1-1.jlink  tkfx_hw1-1_debug.launch  tkfx_hw1-1_run.launch  tkfx_hw2-0.jlink  tkfx_hw2-0_debug.launch  tkfx_hw2-0_run.launch
src/: main.c
src/applicative/: at.c  dlk.c  error.c  geoloc.c  monitoring.c
src/components/: filter.c  mma8653fc.c  neom8n.c  power.c  s2lp.c  sht3x.c
src/peripherals/: adc.c  aes.c  dma.c  exti.c  fault.c  flash.c  gpio.c  i2c.c  iwdg.c  lptim.c  lpuart.c  mapping.c  nvic.c  nvm.c  pwr.c  rcc.c  rtc.c  spi.c  tim.c  usart.c
src/sigfox/: mcu_api.c  rf_api.c
src/utils/: math.c  parser.c  string.c
startup/: startup_stm32.s  tkfx_startup.c
